WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18328
Modifying rx="" or ry="" on a <rect> doesn't relayout
https://bugs.webkit.org/show_bug.cgi?id=18328
Summary
Modifying rx="" or ry="" on a <rect> doesn't relayout
Cameron McCormack (:heycam)
Reported
2008-04-06 00:54:40 PDT
Modifying the rx="" or ry="" attributes on an SVG <rect> element doesn't cause the element to be repainted with the new shape.
Attachments
Patch and test for the bug.
(4.06 KB, patch)
2008-04-06 01:02 PDT
,
Cameron McCormack (:heycam)
no flags
Details
Formatted Diff
Diff
Patch and test for the bug.
(4.04 KB, patch)
2008-04-06 01:08 PDT
,
Cameron McCormack (:heycam)
mjs
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Cameron McCormack (:heycam)
Comment 1
2008-04-06 01:02:49 PDT
Created
attachment 20360
[details]
Patch and test for the bug.
Cameron McCormack (:heycam)
Comment 2
2008-04-06 01:08:54 PDT
Created
attachment 20361
[details]
Patch and test for the bug. With my e-mail address filled in properly this time.
Eric Seidel (no email)
Comment 3
2008-04-13 22:25:37 PDT
WildFox should peak at this.
Maciej Stachowiak
Comment 4
2008-04-22 22:30:03 PDT
Comment on
attachment 20361
[details]
Patch and test for the bug. r=me Looks exactly right. (Actually it would be even better if the test covered ry as well as rx but that would be optional.
Nikolas Zimmermann
Comment 5
2008-04-23 03:02:12 PDT
Oh, funny bug. Good you noticed. Exactly because of bugs like that the plan was to fill svg/dynamic-updates/SVGXXXElement-svgdom-xxx-prop.js / etc. with life. Unfortunately we're still at SVGGElement, and it's a long way to SVGRectElement :-)
Mark Rowe (bdash)
Comment 6
2008-04-24 18:01:05 PDT
Landed in
r32528
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug