2008-04-24  Cameron McCormack  <cam@mcc.id.au>

Reviewed by Maciej Stachowiak.

        Ensure that changes to rx="" and ry="" attributes on an SVG <rect>
        element cause a relayout.

        Test: svg/dom/SVGRectElement/rect-modify-rx.svg

        * svg/SVGRectElement.cpp:
        (WebCore::SVGRectElement::svgAttributeChanged): Call needsLayout()
        when the attribute is rx or ry.
        (WebCore::SVGRectElement::hasRelativeValues): Return true when the
        attribute is rx or ry, since they also can have relative values.

2008-04-24  Cameron McCormack  <cam@mcc.id.au>

        Reviewed by Maciej Stachowiak.

        Test for:
        http://bugs.webkit.org/show_bug.cgi?id=18328
        Modifying rx="" or ry="" on a <rect> doesn't relayout

        * svg/dom/SVGRectElement: Added.
        * svg/dom/SVGRectElement/rect-modify-rx-expected.txt: Added.
        * svg/dom/SVGRectElement/rect-modify-rx.svg: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@32528 bbb929c8-8fbe-4397-9dbb-9b2b20218538