third_party/WebKit/WebCore/svg/SVGRectElement.cpp
@@ -99,6 +99,7 @@ void SVGRectElement::svgAttributeChanged(const QualifiedName& attrName)
 
     if (attrName == SVGNames::xAttr || attrName == SVGNames::yAttr ||
         attrName == SVGNames::widthAttr || attrName == SVGNames::heightAttr ||
+        attrName == SVGNames::rxAttr || attrName == SVGNames::ryAttr ||
         SVGTests::isKnownAttribute(attrName) ||
         SVGLangSpace::isKnownAttribute(attrName) ||
         SVGExternalResourcesRequired::isKnownAttribute(attrName) ||
@@ -124,7 +125,8 @@ Path SVGRectElement::toPathData() const
 bool SVGRectElement::hasRelativeValues() const
 {
     return (x().isRelative() || width().isRelative() ||
-            y().isRelative() || height().isRelative());
+            y().isRelative() || height().isRelative() ||
+            rx().isRelative() || ry().isRelative());
 }
 
 }
